Modify index page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="index.html"><img src="images/logo.png" alt="Logo" width="125px"></a>
+                    <a href="#" class="logo"><span>S</span>ega <span>G</span>adgets</a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -41,11 +41,11 @@
                     <p>
                         For authentic new and Uk Used Gadgets in Uganda.
                     </p>
-                    <a href="" class="btn">Explore Now &#8594;</a>
+                    <a href="" class="btn">Shop Now &#8594;</a>
 
                 </div>
                 <div class="col-2">
-                    <img src="images/image1.png">
+                    <img src="images/iphone.png">
                 </div>
             </div>
         </div>
@@ -58,12 +58,27 @@
             <div class="row">
                 <div class="col-3">
                     <img src="images/category-1.jpg">
+                    <div class="content">
+                        <h3>Smartphones</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
+                        <a href="products.html" class="btn">see more</a>
+                    </div>
                 </div>
                 <div class="col-3">
                     <img src="images/category-2.jpg">
+                    <div class="content">
+                        <h3>Smart Watches</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
+                        <a href="products.html" class="btn">see more</a>
+                    </div>
                 </div>
                 <div class="col-3">
                     <img src="images/category-3.jpg">
+                    <div class="content">
+                        <h3>Home Entertainment</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, tenetur.</p>
+                        <a href="products.html" class="btn">see more</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -302,7 +317,7 @@
         </div>
     </div>
 
-    <!-- Brands    -->
+    <!-- Brands   
     <div class="brands">
         <div class="small-container">
             <div class="row">
@@ -325,7 +340,8 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
+
     <!-- Footer    -->
     <div class="footer">
         <div class="container">
@@ -334,14 +350,14 @@
                     <h3>Download Our App</h3>
                     <p>Download App For Android and Ios </p>
                     <div class="app-logo">
-                        <img src="images/play-store.png" >
-                        <img src="images/app-store.png" >
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png" >
+                    <a href="#" class="logo"><span>S</span>ega <span>G</span>adgets</a>
                     <p> We aim to provide you with the best Gadgets<br> in Town </p>
-                    
+
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
@@ -367,22 +383,22 @@
             </div>
         </div>
     </div>
-<!-- js for toggle menu    -->
-<script>
-    var MenuItems = document.getElementById("MenuItems");
+    <!-- js for toggle menu    -->
+    <script>
+        var MenuItems = document.getElementById("MenuItems");
 
-    MenuItems.style.maxHeight = "0px";
+        MenuItems.style.maxHeight = "0px";
 
-    function menutoggle(){
-        if(MenuItems.style.maxHeight == "0px"){
-            MenuItems.style.maxHeight = "200px";
+        function menutoggle() {
+            if (MenuItems.style.maxHeight == "0px") {
+                MenuItems.style.maxHeight = "200px";
+            }
+            else {
+                MenuItems.style.maxHeight = "0px";
+            }
         }
-        else{
-            MenuItems.style.maxHeight = "0px";
-        }
-    }
 
-</script>
+    </script>
 </body>
 
 
