--- a/account.html
+++ b/account.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" width="125px"></a>
+                <a href="index.html" class="logo"><span>S</span>ega <span>G</span>adgets</a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -43,12 +43,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-2">
-                    <img src="images/image1.png" width="100%">
+                    <img src="images/iphone.png">
                 </div>
                 <div class="col-2">
                     <div class="form-container">
                         <div class="form-btn">
-                            <span onclick="login()">Login</span>
+                            <span onclick="login()" >Login</span>
                             <span onclick="register()">Register </span>
                             <hr id="Indicator">
                         </div>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png">
+                    <a href="#" class="logo"><span>S</span>ega <span>G</span>adgets</a>
                     <p> We aim to provide you with the best Gadgets<br> in Town </p>
 
                 </div>
