Modify Cart page

--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="images/logo.png" alt="Logo" width="125px"></a>
+                <a href="index.html" class="logo"><span>S</span>ega <span>G</span>adgets</a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png">
+                    <a href="#" class="logo"><span>S</span>ega <span>G</span>adgets</a>
                     <p> We aim to provide you with the best Gadgets<br> in Town </p>
 
                 </div>
